test/files/neg/noMember2.scala
object Test {
  val m = scala.collection.IterableOnceOps(1, 2, 3)
}
